tests/preproc_samples/valid/macros/expected.mas
%i i {
    a | b | c;
    a;
    a | b | c;
    a;
    b @l;
    a | b | c;
    a | b | c;
    a;
    b @l;
    a | b | c;
    b @l;
    a;
    a | b | c;
    a;
    b @l;
    a | b | c;
    a | b | c;
    a;
    b @l;
    a | b | c;
    b @l;
    a;
    a | b | c;
    a;
    b @l;
    a | b | c;
    a | b | c;
    a;
    b @l;
    a | b | c;
    b @l;
    a;
    a | b | c;
    a;
    b @l;
    a | b | c;
    a | b | c;
    a;
    b @l;
    a | b | c;
    b @l;
    a | b | c;
}

