tests/preproc_samples/invalid/global_label_in_macros.mas
%m m {
l:
    a;
.l:
    b;
}

%i i {
    !nop;
}